prices and client inside project
